test/parser/should_succeed/string.souc
output(param) = do
    print param
end

main() = do
    output "hello world"
end
