test/parser/should_fail/indentation.souc
main() = do
print "bad indent"
